# rong

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.cache/clangd/index/: buffer.c.B17705DF15A7F7A7.idx  buffer.c.E643AF1EA1BF183A.idx  buffer.h.DBE36672C52064AA.idx  buffer.h.EE03CB4CEF243B14.idx  game.c.A672E77FAE20E39E.idx  game.c.EDCA848044F46F79.idx  game.h.51C576FCF7DF4017.idx  game.h.EBC2D62713F250DF.idx  input.c.A0286ED4EBA85C44.idx  input.c.E801A828F064CF9D.idx  input.h.7E74D889EA4DDC42.idx  input.h.8F160CED796AB745.idx  main.c.5FE0B92AF06B5335.idx  main.c.DA3FA8F24D820FBE.idx  mat3.h.CC7BE9DEFDA8EAC2.idx  mat4.h.0939FD78C4BB2DA8.idx  mat4.h.4FC600EF303961E2.idx  renderer.c.2E21F7827CFCA6EA.idx  renderer.c.570B93CF0097754B.idx  renderer.h.4E5E12B349679ADE.idx  renderer.h.B08AED94E23E2FF0.idx  shader.c.71C4AAB6413BA870.idx  shader.c.BFE4DE33F6F0D563.idx  shader.h.167643B124CF6D6B.idx  shader.h.77F9C2B8B89C297C.idx  vec3.h.1A590A798473BECD.idx  vec3.h.FE23D49900E45D07.idx  vec4.h.05FBA02519199A67.idx  vec4.h.7B4A29C703C08C38.idx  window.c.AF55A5397C978AFD.idx  window.c.C4ECF20FAEDEB6F5.idx  window.h.13F073C11A7C4691.idx  window.h.5C63758FDC2018B0.idx
assets/sprites/: Sprite-0001-Recovered.aseprite  Sprite-0001.aseprite  star_purple_remastered_firstiteration.xcf
shaders/: fs.glsl  vs.glsl
shaders/particleshader/: fs.glsl  fs.glsl~  vs.glsl
shaders/textureshaders/: fs.glsl  vs.glsl
src/: main.c
src/game/: ball.c  ball.h  game.c  game.h  player.c  player.h  window.c  window.h
src/graphics/: buffer.c  buffer.h  camera.c  camera.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
src/graphics/atlas/: atlas.c  atlas.h
src/graphics/defines/: colors.h
src/graphics/font/: font.c  font.h
src/graphics/particlesystem/: particle_emmiter.c  particle_emmiter.h
src/input/: input.c  input.h
src/math/: aabb.h  common.h  mat3.h  mat4.h  projection.h  renmath.h  vec2.h  vec3.h  vec4.h
src/utils/: assert.h  log.h  random.h  string.h
